# progenitor

./: .gitignore  CHANGELOG.adoc  Cargo.toml  README.md  release.toml  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/buildomat/: config.toml
.github/workflows/: rust.yml
cargo-progenitor/: Cargo.toml  build.rs
cargo-progenitor/src/: main.rs
cargo-progenitor/tests/: test_cmd.rs
cargo-progenitor/tests/data/: test_help.stdout
docs/: builder-generation.md  generated_methods.md  implementing-client.md  positional-generation.md  progenitor-client.md
example-build/: Cargo.toml  build.rs
example-build/src/: main.rs
example-macro/: Cargo.toml
example-macro/src/: main.rs
example-only-types/: Cargo.toml  build.rs
example-only-types/src/: main.rs
example-out-dir/: Cargo.toml  build.rs
example-out-dir/src/: main.rs
example-wasm/: Cargo.toml  build.rs
example-wasm/src/: main.rs
example-wasm/tests/: client.rs
progenitor/: Cargo.toml
progenitor-client/: Cargo.toml
progenitor-client/src/: gloo_impl.rs  lib.rs  progenitor_client.rs  reqwest_impl.rs  shared.rs
progenitor-client/tests/: client_test.rs
progenitor-impl/: Cargo.toml
progenitor-impl/src/: cli.rs  httpmock.rs  lib.rs  main.rs  map.rs  method.rs  opid.rs  security.rs  template.rs  to_schema.rs  util.rs
progenitor-impl/tests/: test_compilation.rs  test_httpmock_query_arrays.rs  test_httpmock_string_body.rs  test_output.rs  test_specific.rs
progenitor-impl/tests/output/: Cargo.toml  buildomat-builder-tagged.out  buildomat-builder.out  buildomat-cli.out  buildomat-httpmock.out  buildomat-positional.out  buildomat-types-only.out  buildomat.out  github-cli.out  github-httpmock.out  keeper-builder-tagged.out  keeper-builder.out  keeper-cli.out  keeper-granular-types.out  keeper-httpmock.out  keeper-positional.out  keeper-types-only.out  keeper.out  nexus-builder-tagged.out  nexus-builder.out  nexus-cli.out  nexus-httpmock.out  nexus-positional.out  nexus-types-only.out  nexus.out  openai-openapi-builder-tagged.out  openai-openapi-builder.out  openai-openapi-cli.out  openai-openapi-httpmock.out  openai-openapi-positional.out  param-collision-builder-tagged.out  param-collision-builder.out  param-collision-cli.out  param-collision-granular-types.out  param-collision-httpmock.out  param-collision-positional.out  param-overrides-builder-tagged.out  param-overrides-builder.out  param-overrides-cli.out  param-overrides-granular-types.out  (+14 more)
progenitor-impl/tests/output/src/: buildomat_builder.rs  buildomat_builder_middleware.rs  buildomat_builder_tagged.rs  buildomat_builder_tagged_middleware.rs  buildomat_cli.rs  buildomat_httpmock.rs  buildomat_middleware.rs  buildomat_positional.rs  buildomat_positional_middleware.rs  cli_gen_builder.rs  cli_gen_builder_middleware.rs  cli_gen_builder_tagged.rs  cli_gen_builder_tagged_middleware.rs  cli_gen_cli.rs  cli_gen_httpmock.rs  cli_gen_httpmock_middleware.rs  cli_gen_middleware.rs  cli_gen_positional.rs  cli_gen_positional_middleware.rs  example_multipart_builder.rs  example_multipart_builder_tagged.rs  example_multipart_cli.rs  example_multipart_httpmock.rs  example_multipart_positional.rs  generated_operation_id_builder.rs  generated_operation_id_builder_tagged.rs  generated_operation_id_cli.rs  generated_operation_id_httpmock.rs  generated_operation_id_positional.rs  httpmock_query_array_builder.rs  httpmock_query_array_builder_tagged.rs  httpmock_query_array_cli.rs  httpmock_query_array_httpmock.rs  httpmock_query_array_positional.rs  httpmock_string_body_builder.rs  httpmock_string_body_builder_tagged.rs  httpmock_string_body_cli.rs  httpmock_string_body_httpmock.rs  httpmock_string_body_positional.rs  keeper_builder.rs  (+86 more)
progenitor-impl/tests/output/src/gloo_backend/: buildomat_builder.rs  buildomat_builder_tagged.rs  buildomat_positional.rs  cli_gen_builder.rs  cli_gen_builder_tagged.rs  cli_gen_positional.rs  keeper_builder.rs  keeper_builder_tagged.rs  keeper_positional.rs  nexus_builder.rs  nexus_builder_tagged.rs  nexus_positional.rs  param_collision_builder.rs  param_collision_builder_tagged.rs  param_collision_positional.rs  param_overrides_builder.rs  param_overrides_builder_tagged.rs  param_overrides_positional.rs  propolis_server_builder.rs  propolis_server_builder_tagged.rs  propolis_server_positional.rs
progenitor-impl/tests/output/src/reqwest_backend/: buildomat_builder.rs  buildomat_builder_tagged.rs  buildomat_positional.rs  cli_gen_builder_tagged.rs  cli_gen_httpmock.rs  keeper_builder_tagged.rs  keeper_httpmock.rs  nexus_httpmock.rs  param_collision_builder.rs  param_collision_cli.rs  param_overrides_cli.rs  param_overrides_httpmock.rs  propolis_server_cli.rs  propolis_server_positional.rs  test_default_params_builder.rs  test_default_params_positional.rs  test_renamed_parameters.rs
progenitor-macro/: Cargo.toml
progenitor-macro/src/: lib.rs  token_utils.rs
progenitor/src/: lib.rs  main.rs
progenitor/tests/: build_buildomat.rs  build_keeper.rs  build_nexus.rs  build_propolis.rs  build_sevdesk.rs  load_yaml.rs  no_operation_id.rs  test_client.rs
sample_openapi/: README.md  api.github.com.json  buildomat.json  cli-gen.json  example_multipart.json  httpmock-query-array.yaml  httpmock-string-body.yaml  keeper.json  missing-operation-id.json  multipart-related-test.json  nexus.json  no-operation-id.yaml  openai-openapi.yaml  param-collision.json  param-overrides.json  param-overrides.yaml  propolis-server.json  query-param-defaults.json  sevdesk-san-sub.yaml  vault.json  websocket-default.json
src/: main.rs  template.rs
test-progenitor-compilation/: Cargo.toml
test-progenitor-compilation/src/: lib.rs
