[package]
name = "cargo-progenitor"
version = "0.8.0"
edition = "2021"
license = "MPL-2.0"
description = "A cargo command to generate a Rust client SDK from OpenAPI"
repository = "https://github.com/oxidecomputer/progenitor.git"
readme = "../README.md"
keywords = ["openapi", "openapiv3", "sdk", "generator"]
categories = ["api-bindings", "development-tools::cargo-plugins"]
build = "build.rs"

default-run = "cargo-progenitor"

[dependencies]
progenitor = { workspace = true, default-features = false }
progenitor-client = { workspace = true }
progenitor-impl = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
openapiv3 = { workspace = true }
rustfmt-wrapper = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[build-dependencies]
built = { workspace = true }
project-root = { workspace = true }
