[package]
name = "cargo-progenitor"
version = "0.11.2"
edition = "2021"
license = "MPL-2.0"
description = "A cargo command to generate a Rust client SDK from OpenAPI"
repository = "https://github.com/oxidecomputer/progenitor.git"
readme = "../README.md"
keywords = ["openapi", "openapiv3", "sdk", "generator"]
categories = ["api-bindings", "development-tools::cargo-plugins"]

default-run = "cargo-progenitor"

[dependencies]
progenitor = { workspace = true, default-features = false }
progenitor-client = { workspace = true, features = ["reqwest-client"] }
progenitor-impl = { workspace = true }

anyhow = { workspace = true }
assert_cmd = { workspace = true }
clap = { workspace = true }
clap-cargo = { workspace = true }
env_logger = { workspace = true }
expectorate = { workspace = true }
openapiv3 = { workspace = true }
rustfmt-wrapper = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
