[package]
name = "example-build"
version = "0.0.1"
authors = ["Adam H. Leventhal <ahl@oxidecomputer.com>"]
edition = "2021"

[dependencies]
chrono = { workspace = true }
progenitor-client = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true }

[build-dependencies]
progenitor = { workspace = true }
serde_json = { workspace = true }
