[package]
name = "example-build"
version = "0.0.1"
authors = ["Adam H. Leventhal <ahl@oxidecomputer.com>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
progenitor-client = { path = "../progenitor-client" }
reqwest = { version = "0.11.24", features = ["json", "stream"] }
base64 = "0.22"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.7", features = ["serde", "v4"] }

[build-dependencies]
prettyplease = "0.2.16"
progenitor = { path = "../progenitor" }
serde_json = "1.0"
syn = "2.0"
