[package]
name = "example-macro"
version = "0.0.1"
authors = ["Adam H. Leventhal <ahl@oxidecomputer.com>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
progenitor = { path = "../progenitor" }
reqwest = { version = "0.12.4", features = ["json", "stream"] }
schemars = { version = "0.8.22", features = ["uuid1"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.15", features = ["serde", "v4"] }
