[package]
name = "example-only-types"
version = "0.0.1"
authors = ["Daniel Levin <daniellevin2607@gmail.com>"]
edition = "2021"

[dependencies]
# We aren't generating a reqwest client, so there is no need to depend on it.
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

# For the purposes of the example, we'll se/der to/from CBOR.
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"

[build-dependencies]
anyhow = "1"
progenitor = { path = "../progenitor" }
serde_json = "1.0"
