[package]
name = "example-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
progenitor-client = { path = "../progenitor-client" }
reqwest = { version = "0.12.25", features = ["json", "stream"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.19", features = ["serde", "v4", "js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[build-dependencies]
prettyplease = "0.2.37"
progenitor = { path = "../progenitor" }
serde_json = "1.0"
syn = "2.0"
