[package]
name = "progenitor-client"
version = "0.12.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/oxidecomputer/progenitor.git"
description = "An OpenAPI client generator - client support"

[dependencies]
bytes = { workspace = true }
futures-core = { workspace = true }
percent-encoding = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }

[dev-dependencies]
url = { workspace = true }
uuid = { workspace = true }
