[package]
name = "progenitor-impl"
version = "0.4.0"
edition = "2021"
license = "MPL-2.0"
description = "An OpenAPI client generator - core implementation"
repository = "https://github.com/oxidecomputer/progenitor.git"
readme = "../README.md"

[dependencies]
heck = "0.4.1"
http = "0.2.9"
getopts = "0.2"
indexmap = "2.1.0"
openapiv3 = "2.0.0"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.10"
schemars = { version = "0.8.12", features = ["chrono", "uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["parsing"] }
thiserror = "1.0"
# change when publishing
#typify = { version = "0.0.14" }
typify = { git = "https://github.com/oxidecomputer/typify" }
unicode-ident = "1.0.12"

[dev-dependencies]
base64 = "0.21"
clap = { version = "4.4", features = ["derive", "string", "env"] }
chrono = { version = "0.4", features = ["serde"] }
dropshot = { git = "https://github.com/oxidecomputer/dropshot", default-features = false }
expectorate = "1.1"
futures = "0.3.27"
http = "0.2.9"
hyper = "0.14.27"
progenitor-client = { path = "../progenitor-client" }
rand = "0.8"
regress = "0.7.1"
reqwest = { version = "0.11.22", features = ["json", "stream"] }
rustfmt-wrapper = "0.2.1"
serde_yaml = "0.9"
serde_json = "1.0.108"
test-progenitor-compilation = { path = "../test-progenitor-compilation" }
uuid = { version = "1.6", features = ["serde", "v4"] }
