[package]
name = "progenitor-impl"
version = "0.9.1"
edition = "2021"
license = "MPL-2.0"
description = "An OpenAPI client generator - core implementation"
repository = "https://github.com/oxidecomputer/progenitor.git"
readme = "../README.md"

[dependencies]
heck = { workspace = true }
http = { workspace = true }
indexmap = { workspace = true }
openapiv3 = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
typify = { workspace = true }
unicode-ident = { workspace = true }

[dev-dependencies]
dropshot = { workspace = true }
expectorate = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
progenitor-client = { workspace = true }
reqwest = { workspace = true }
rustfmt-wrapper = { workspace = true }
semver = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
