[package]
name = "progenitor-macro"
version = "0.9.1"
edition = "2021"
license = "MPL-2.0"
description = "An OpenAPI client generator - macros"
repository = "https://github.com/oxidecomputer/progenitor.git"
readme = "../README.md"

[lib]
proc-macro = true

[features]
middleware = ["dep:reqwest-middleware","progenitor-impl/middleware"]

[dependencies]
openapiv3 = "2.0.0"
proc-macro2 = "1.0"
progenitor-impl = { version = "0.9.1", path = "../progenitor-impl" }
quote = "1.0"
reqwest-middleware = { version = "0.4.1", features = ["json"], optional = true }
schemars = "0.8.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_tokenstream = "0.2.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
