[package]
name = "progenitor-macro"
version = "0.12.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "An OpenAPI client generator - macros"
repository = "https://github.com/oxidecomputer/progenitor.git"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
openapiv3 = "2.2.0"
proc-macro2 = "1.0"
progenitor-impl = { version = "0.12.0", path = "../progenitor-impl" }
quote = "1.0"
schemars = "0.8.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_tokenstream = "0.2.2"
syn = { version = "2.0", features = ["full", "extra-traits"] }
