[package]
name = "progenitor-macro"
version = "0.14.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "An OpenAPI client generator - macros"
repository = "https://github.com/oxidecomputer/progenitor.git"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
openapiv3 = { workspace = true }
proc-macro2 = { workspace = true }
progenitor-impl = { workspace = true }
quote = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_tokenstream = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
