[package]
name = "progenitor"
version = "0.7.0"
edition = "2021"
license = "MPL-2.0"
description = "An OpenAPI client generator"
repository = "https://github.com/oxidecomputer/progenitor.git"
readme = "../README.md"
keywords = ["openapi", "openapiv3", "sdk", "generator", "proc_macro"]
categories = ["api-bindings", "compilers"]

[dependencies]
progenitor-client = { workspace = true }
progenitor-impl = { workspace = true }
progenitor-macro = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
percent-encoding = { workspace = true }
rand = { workspace = true }
regress = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
