[package]
name = "test-progenitor-compilation"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "An OpenAPI client generator - compilation test macro"
repository = "https://github.com/oxidecomputer/progenitor.git"

[lib]
proc-macro = true

[dependencies]
dropshot = { workspace = true }
expectorate = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
openapiv3 = { workspace = true }
proc-macro2 = { workspace = true }
progenitor-impl = { workspace = true }
quote = { workspace = true }
schemars = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
